--- a/style.css
+++ b/style.css
@@ -56,20 +56,37 @@ label #btn:hover {
 
 }
 
-header {
-    text-align: center;
+header img {
+    margin-left: 0px;
     padding: 10px;
-    border-bottom: 1px solid aqua;
-    border-radius: 10px;
+    border-radius: 50px;
     color: rgb(87, 58, 80);
     background-color: cadetblue;
     transition: .5s;
+    width: 50px;
+    height: 50px;
+    margin-bottom: 5px;
+    margin-top: 10px;
+
 }
 
-header:hover {
-    background-color: aqua;
-    color: orange;
+header h1 {
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: rgba(0, 126, 236, 0.801);
+
 }
+
+header {
+    border-bottom: 1px solid aqua;
+    background-color: rgba(133, 151, 114, 0.658);
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    border-radius: 10px;
+
+}
+
 
 .sidebar_overall {
     padding: 20px;
@@ -190,6 +207,138 @@ li:hover a {
     transform: scale(1.1);
 }
 
+/* third part start */
+.third_tittle {
+    text-align: center;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    font-size: 30px;
+    box-shadow: 0px 0px 10px 10px aqua;
+}
+
+
+.two_blogs {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-left: 60px;
+    margin-right: 120px;
+
+}
+
+.mission img,
+.goals img {
+    width: 300px;
+    height: 300px;
+    margin-left: 105px;
+
+
+}
+
+.mission img:hover {
+    transform: scale(1.2);
+    transition: .5s;
+}
+
+.goals img:hover {
+    transform: scale(1.2);
+    transition: .5s;
+}
+
+.mission,
+.goals {
+    box-sizing: border-box;
+    box-shadow: 0px 0px 10px 10px aqua;
+    border: 1px solid aqua;
+    border-radius: 10px;
+    margin-left: 100px;
+    padding: 10px;
+    background-image: linear-gradient(rgba(0, 255, 13, 0.637), rgba(255, 0, 0, 0.658));
+}
+
+.mission:hover {
+    background-image: linear-gradient(rgb(187, 255, 0), rgb(255, 0, 242));
+}
+
+.goals:hover {
+    background-image: linear-gradient(rgb(187, 255, 0), rgb(255, 0, 242));
+}
+
+.tittle_two {
+    text-align: center;
+    font-size: 40px;
+    color: rgb(11, 240, 228);
+    border-bottom: 1px solid aqua;
+}
+
+.para {
+    padding: 20px;
+    color: rgb(255, 255, 255);
+}
+
+.para:hover {
+    transform: scale(1.1);
+    transition: .5s;
+    color: rgba(0, 0, 0, 0.76);
+
+}
+
+/* four part starting */
+
+
+.four {
+    text-align: center;
+    padding: 20px;
+    background-color: black;
+    margin-top: 100px;
+}
+
+.last_tittle {
+    color: #fff;
+    margin-bottom: 5%;
+    font-size: 26px;
+
+}
+
+a {
+    font-size: 30px;
+    color: rgb(235, 14, 14);
+    padding: 10px;
+
+
+
+}
+
+.all_links a:hover i {
+    transform: rotate(50deg);
+    transition: .5s;
+    color: wheat;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* only device width 700px */
 @media only screen and (max-width:700px) {
     .sidebar_overall {
@@ -221,4 +370,41 @@ li:hover a {
         height: 300px;
         margin-bottom: -15px;
     }
+
+    .two_blogs {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 60px;
+
+    }
+
+    .mission img {
+        margin-left: 45px;
+    }
+
+    .mission {
+        margin-left: -10%;
+        margin-right: 15%;
+    }
+
+    .goals img {
+        margin-left: 5px;
+    }
+
+    .goals {
+        margin-left: -10%;
+        margin-right: 15%;
+    }
+
+    /* third part */
+    .four {
+
+        text-align: center;
+        margin-right: 0;
+    }
+
+
+
+
+
 }
